# kinect_v2_ros2

./: CMakeLists.txt  README.md  package.xml
launch/: bridges.launch.py  display.launch.py  gazebo.launch.py  kinect_v2.launch.py
rviz/: urdf.rviz
urdf/: kinect_v2.gazebo.xacro  kinect_v2.urdf.xacro  kinect_v2_standalong.urdf.xacro
